[gd_scene load_steps=4 format=3 uid="uid://xausg38qpt1e"]

[ext_resource type="Script" uid="uid://bs50gitvun2pk" path="res://MainMenu/mainmenu.gd" id="1_3fbfh"]
[ext_resource type="AudioStream" uid="uid://0xwiu8vhk0mc" path="res://MainMenu/bgmusic.mp3" id="2_1bclm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_loy4s"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3fbfh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -295.0
offset_top = 112.0
offset_right = 295.0
offset_bottom = 167.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Not Another Backrooms Game"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -67.0
offset_right = 129.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.7497807, 0.7497797, 0.74977994, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_loy4s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_loy4s")
theme_override_styles/hover = SubResource("StyleBoxFlat_loy4s")
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.7497807, 0.7497797, 0.74977994, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_loy4s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_loy4s")
theme_override_styles/hover = SubResource("StyleBoxFlat_loy4s")
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.7497807, 0.7497797, 0.74977994, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_loy4s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_loy4s")
theme_override_styles/hover = SubResource("StyleBoxFlat_loy4s")
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1bclm")
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="startbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="exitbutton_pressed"]
